# workshop

./: .gitignore  LICENSE  README.md  app.toml  config.py  pyproject.toml  run.py
app/: __init__.py
app/forms/: editor.py  login.py
app/models/: __init__.py  admin.py  archive.py  post.py
app/routes/: __init__.py  admin.py  auth.py  main.py
app/static/css/: pace.css
app/templates/: about.html  home.html  login.html  search_results.html
app/templates/archive/: editor.html  index.html
app/templates/blog/: detail.html  editor.html  index.html
app/templates/layout/: base.html  footer.html  nav.html
app/utils/: file_operation.py  list_files.py  packageing.py  secure_filename.py  weather.py
